--- a/no.html
+++ b/no.html
@@ -13,7 +13,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('/w3images/profile_girl.jpg');
+    background-image: url('rally.jpg');
     min-height: 100%;
 }
 </style>
@@ -110,26 +110,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       </div>
     </div>
 
-    <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
 
     <!-- Testimonials -->
-    <h3 class="w3-padding-24">Founders</h3>
-    <img src="/w3images/avatar_smoke.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Dariela Hernandez</span> Coder</p>
-
-    <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Haylie Nyguen</span> Coder</p>
-
-    <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Dinahsti Blackburn</span> Coder</p>
-    <p>No one is better than Jane Doe.</p><br>
 
     <!-- Grid for pricing tables -->
-    <h3 class="w3-padding-16">#MeToo</h3>
+    <h3 class="w3-padding-16">#MeToo & #TimesUp</h3>
 
-    <p>The #MeToo nd #TimesUp Movements are movements against sexual harassment and assault.
+    <p>#MeToo and #TimesUp are movements against sexual harassment and assault.
       They are hashtags used on social media
     in an attempt to demonstrate the widespread prevalence of sexual assault and harassment, especially in the workplace.</p>
 
@@ -158,13 +145,26 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       </div>
     <!-- End Grid/Pricing tables -->
     </div>
+<div>
+    <h3 class="w3-padding-24">Founders</h3>
+    <img src="/w3images/avatar_smoke.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <p><span class="w3-large w3-text-black w3-margin-right">Dariela Hernandez</span> Coder</p>
+
+    <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <p><span class="w3-large w3-text-black w3-margin-right">Haylie Nyguen</span> Coder</p>
+
+    <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <p><span class="w3-large w3-text-black w3-margin-right">Dinahsti Blackburn</span> Coder</p>
+
+    <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <p><span class="w3-large w3-text-black w3-margin-right">Daniela Porcayo Marquina</span> Coder</p>
 
   <!-- End About Section -->
   </div>
 
   <!-- Contact Section -->
   <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
-    <h2>Contact Me</h2>
+    <h2>Contact Us</h2>
     <hr class="w3-opacity">
 
     <div class="w3-section">
