--- a/home.html
+++ b/home.html
@@ -59,10 +59,10 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">Hotlines</a></li>
-  <li><a href="#contact">Advice</a></li>
-  <li><a href="#contact">Comments</a></li>
-  <li><a href="#contact">Pictures</a></li>
+  <li><a href="hotlines.htm">Hotlines</a></li>
+  <li><a href="advice.htm">Advice</a></li>
+  <li><a href="comments.htm">Comments</a></li>
+  <li><a href="pictures.htm">Pictures</a></li>
 </ul>
 
 <!-- Sidebar with image -->
