--- a/home.html
+++ b/home.html
@@ -55,9 +55,9 @@ li a:hover {
 <ul>
   <li><a class="active" href="home.html">Home</a></li>
   <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="advice.html">Advice</a></li>
-  <li><a href="comments.html">Comments</a></li>
-  <li><a href="pictures.html">Pictures</a></li>
+  <li><a href="advice.htm">Advice</a></li>
+  <li><a href="comments.htm">Comments</a></li>
+  <li><a href="pictures.htm">Pictures</a></li>
 </ul>
 
 <!-- Sidebar with image -->
