--- a/hotline.html
+++ b/hotline.html
@@ -87,10 +87,27 @@ li a:hover {
 
 <div>
   <p>
-Here are some resources you can utilize whenever you're feeling down. It's important to vent to someone because bottling up our emotions leads to disaster. Although these hotlines cannot be used in place of a therapist, they can be very healpful in times of need, offering a kind and understanding voice. Stay safe and remember there is always someone to listen. 
+Here are some resources you can utilize whenever you're feeling down. It's important to vent to someone because bottling up your emotions leads to disaster. Although these hotlines cannot be used in place of a therapist, they can be very healpful in times of need, offering a kind and understanding voice. Stay safe and remember there is always someone who will listen.
 
   <!-- End Contact Section -->
   </div>
+
+<div>
+  <h3 align = "center">
+<p>National Sexual Assault Hotline | 1-800-656-HOPE (4673)</p>
+<p>Teen Hope Line | 1-800-394-HOPE </p>
+<p>Youth Crisis Hotline | 1-800-448-4663
+ </p>
+ <p> RAINN | 1-800-656-HOPE (4673)</p>
+<p>National Domestic Violence Hotline | 1-800-799-SAFE
+ </p>
+ <p>National Domestic Violence Hotline Spanish | 1-800-942-6908
+</p>
+
+
+
+
+  </h3>
 
 
 
