--- a/pictures.htm
+++ b/pictures.htm
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<style>
-<title>W3.CSS Template</title>
+<title>Pictures</title>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
+
+<style>
 
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 div {
@@ -64,13 +66,6 @@ li a:hover {
   background-color: #4CAF50;
 }
 
-<ul>
-  <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="advice.htm">Advice</a></li>
-  <li><a href="comments.htm">Comments</a></li>
-  <li><a href="pictures.htm">Pictures</a></li>
-</ul>
 
 * {
     box-sizing: border-box;
@@ -107,11 +102,26 @@ body {
 }
 
 </style>
+
+
+
+
+
 <body>
+
+  <ul>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="hotline.html">Hotlines</a></li>
+    <li><a href="advice.htm">Advice</a></li>
+    <li><a href="comments.htm">Comments</a></li>
+    <li><a href="pictures.htm">Pictures</a></li>
+  </ul>
+
+
 
 <!-- Header -->
 <div class="header" id="myHeader">
-  <h1>Pictures</h1>
+  <h1>Image Grid</h1>
 
 </div>
 
