new name for hotlines and I didn't save last time

--- a/skeletonCode.html
+++ b/skeletonCode.html
@@ -66,7 +66,7 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Hotlines</a></li>
+  <li><a href="hotline.html">Resources</a></li>
   <li><a href="#contact">Advice</a></li>
   <li><a href="#contact">Comments</a></li>
   <li><a href="#contact">Pictures</a></li>
