hotlines is back

--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Resources</a></li>
+  <li><a href="hotline.html">Hotlines</a></li>
   <li><a href="advice.htm">Advice</a></li>
   <li><a href="comments.htm">Comments</a></li>
   <li><a href="pictures.htm">Pictures</a></li>
