--- a/hotline.html
+++ b/hotline.html
@@ -66,7 +66,7 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Resources</a></li>
+  <li><a href="hotline.html">Hotlines</a></li>
   <li><a href="#contact">Advice</a></li>
   <li><a href="#contact">Comments</a></li>
   <li><a href="#contact">Pictures</a></li>
@@ -79,9 +79,12 @@ li a:hover {
 
 <!-- Page Content -->
 
+<p>
 
-
+</p>
 <div>
+</div>
+
   <header> <h1 align="center">Hotlines </h1></header>
 </div>
 
@@ -103,7 +106,7 @@ Here are some resources you can utilize whenever you're feeling down. It's impor
  </p>
  <p>National Domestic Violence Hotline Spanish | 1-800-942-6908
 </p>
-
+</div>
 
 
 
