--- a/pictures.htm
+++ b/pictures.htm
@@ -122,36 +122,26 @@ body {
 <!-- Header -->
 <div class="header" id="myHeader">
   <h1>Image Grid</h1>
-
 </div>
 
 <!-- Photo Grid -->
 <div class="row">
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="788.jpg" style="width:100%">
+    <img src="campusassault.jpg" style="width:100%">
+    <img src="GirlTalk.jpg" style="width:100%">
+    <img src="golden.jpg" style="width:100%">
+    <img src="GoldenGlobes.jpg" style="width:100%">
+    <img src="handsy.jpg" style="width:100%">
+    <img src="kat.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="me2.jpg" style="width:100%">
+    <img src="MeToo.jpg" style="width:100%">
+    <img src="metooposter.jpg" style="width:100%">
+    <img src="metooprotest.jpg" style="width:100%">
+    <img src="oneinfive.jpg" style="width:100%">
+    <img src="rally.jpg" style="width:100%">
   </div>
 
 <script>
