--- a/hotline.html
+++ b/hotline.html
@@ -62,15 +62,20 @@ li a:hover {
 .active {
   background-color: #4CAF50;
 }
+p{
+  margin-left: 250px;
+  margin-right: 250px;
+}
 </style>
 
 <ul>
   <li><a class="active" href="home.html">Home</a></li>
   <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="#contact">Advice</a></li>
-  <li><a href="#contact">Comments</a></li>
-  <li><a href="#contact">Pictures</a></li>
+  <li><a href="advice.htm">Advice</a></li>
+  <li><a href="comments.htm">Comments</a></li>
+
 </ul>
+
 
 
 
