to spell haylies name correctly

--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@ li a:hover {
     <p><span class="w3-large w3-text-black w3-margin-right">Dariela Hernandez</span> Coder</p>
 
     <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Haylie Nyguen</span> Coder</p>
+    <p><span class="w3-large w3-text-black w3-margin-right">Haylie Nguyen</span> Coder</p>
 
     <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-text-black w3-margin-right">Dinahsti Blackburn</span> Coder</p>
