--- a/aboutus.htm
+++ b/aboutus.htm
@@ -20,9 +20,60 @@
 <style>
 </style>
 
-
 <body>
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="" alt="Dariela" style="width:100%">
+        <div class="container">
+          <h2>Dariela Hernandez</h2>
+          <p class="title">Lead Coder &amp; Founder</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>dari123hdz@gmail.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
 
+    <div class="column">
+      <div class="card">
+        <img src="" alt="Haylie" style="width:100%">
+        <div class="container">
+          <h2>Haylie Nguyen</h2>
+          <p class="title">Coder</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>example@example.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
 
+    <div class="column">
+      <div class="card">
+        <img src="img3.jpg" alt="Dinahsti" style="width:100%">
+        <div class="container">
+          <h2>Dinahsti Blackburn</h2>
+          <p class="title">Coder</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>dinahsti14black@gmail.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="" alt="Daniella" style="width:100%">
+      <div class="container">
+        <h2>Daniella Porcayo Marquina</h2>
+        <p class="title">Coder</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>dpocayomarquina@gmail.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
