--- a/advice.htm
+++ b/advice.htm
@@ -1,1 +1,122 @@
-<h1>advice</h1>
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="finalProject.css">
+<style>
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+div {
+    margin: 70px;
+  text-indent: 50px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+.bgimg {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100%;
+
+    font-size: 28px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+</style>
+
+<ul>
+  <li><a class="active" href="home.html">Home</a></li>
+  <li><a href="hotline.html">Hotlines</a></li>
+  <li><a href="#contact">Advice</a></li>
+  <li><a href="#contact">Comments</a></li>
+  <li><a href="#contact">About Us</a></li>
+</ul>
+
+
+
+
+
+
+<!-- Page Content -->
+
+<p>
+
+</p>
+<div>
+</div>
+
+  <header> <h1 align="center">Advice </h1></header>
+</div>
+
+<div>
+  <h3 align = "center">
+<p>Perpetrators will look for hairstyles that are easily grabbed (ponytails, buns, braids). They’re more likely to go after someone with long hair.
+They also look for clothing that is easy and quick to take off. Some will even carry scissors with them to cut clothing.
+They look for women who are off guard, on their phones, searching their purse, etc.
+Most perpetrators are likely to attack in the early morning around 5 - 8 am.
+The number one place that people are abducted are in grocery store parking lots, then office parking lots/garages, and finally public restrooms. They are trying to look to grab a person and then move them to another location.
+Only 2% carry weapons because the sentence for rape with a weapon is 12 years longer than solely rape.
+If you put up a fight, the perpetrator will get discouraged and realize your not worth it because it will be time consuming.
+They will not choose people who have umbrellas or objects in their hands that can be used from a distance. Keys are not discouraging to them because you have to get close to them to cause harm.
+If someone is following you on a street, in a garage, into an elevator or stairwell, look them in the eyes and ask them a question. Now that you’ve seen their face and can identify them in a line-up, it’s riskier for the perpetrator.
+If you have pepper spray (which is highly encouraged) yell that you do and hold it out
+If someone grabs you and you can’t beat them by strength, outsmart them. If you are grabbed around the waist from behind, pinch the attacker either under the arm (between the armpit and elbow) or (in the upper-inner thigh) very hard.
+After that, go for the groin, you might think it’ll make the attacker angerier, but it’s just making it more difficult for the attacker, discouraging them.
+When an attacker puts its hands up to you, grab their two first fingers and bend back as far as possible with as much pressure pushing down on them as feasible.
+Always be aware of your surrounds, take someone with you, if possible, if you see something, don’t brush it off, and go with your instinct!
+It’s best to be safe and cautious!!
+
+ </p>
+</div>
+
+
+
+  </h3>
+
+
+
+<!-- END PAGE CONTENT -->
+</div>
+
+</body>
+</html>
