--- a/home.html
+++ b/home.html
@@ -8,48 +8,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
 <style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-.bgimg {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url('rally.jpg');
-    min-height: 100%;
-
-    font-size: 28px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-
-.active {
-  background-color: #4CAF50;
-}
 </style>
 
 <ul>
@@ -57,25 +15,17 @@ li a:hover {
   <li><a href="hotline.html">Hotlines</a></li>
   <li><a href="advice.htm">Advice</a></li>
   <li><a href="comments.htm">Comments</a></li>
-  <li><a href="pictures.htm">Pictures</a></li>
+  <li><a href="aboutus.htm">About Us</a></li>
 </ul>
 
 <!-- Sidebar with image -->
 <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
   <div class="bgimg"></div>
 </nav>
-
-
-
-
-
 <!-- Page Content -->
 <div class="w3-main w3-padding-large" style="margin-left:40%">
 
-
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <!-- <h1 class="w3-jumbo"><b>El Sol</b></h1>
-    <p>Help & Healing</p> -->
     <div class="header">
        <h1 class="w3-jumbo"><b>El Sol</b></h1>
        <p>
@@ -87,7 +37,6 @@ li a:hover {
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
   </header>
 
-
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
@@ -96,9 +45,6 @@ li a:hover {
        you will find pictures, advice, and hotlines on this topic.
     </p>
     </div>
-
-
-
   <!-- Portfolio Section -->
   <div class="w3-padding-32 w3-content" id="portfolio">
     <h2 class="w3-text-grey">Pictures</h2>
@@ -178,22 +124,6 @@ li a:hover {
       </div>
     <!-- End Grid/Pricing tables -->
     </div>
-<div>
-    <h3 class="w3-padding-24">Founders</h3>
-    <img src="/w3images/avatar_smoke.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Dariela Hernandez</span> Coder</p>
-
-    <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Haylie Nyguen</span> Coder</p>
-
-    <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Dinahsti Blackburn</span> Coder</p>
-
-    <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Daniela Porcayo Marquina</span> Coder</p>
-
-  <!-- End About Section -->
-  </div>
 
   <!-- Contact Section -->
   <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
