--- a/advice.htm
+++ b/advice.htm
@@ -7,111 +7,60 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
-<style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-div {
-    margin: 70px;
-  text-indent: 50px;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
-}
-
-.bgimg {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100%;
-
-    font-size: 28px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-
-.active {
-  background-color: #4CAF50;
-}
-</style>
 
 <ul>
   <li><a class="active" href="home.html">Home</a></li>
   <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="#contact">Advice</a></li>
-  <li><a href="#contact">Comments</a></li>
-  <li><a href="#contact">About Us</a></li>
+  <li><a href="advice.htm">Advice</a></li>
+  <li><a href="comments.htm">Comments</a></li>
+  <li><a href="aboutus.htm">About Us</a></li>
 </ul>
 
-
-
-
-
-
-<!-- Page Content -->
-
-<p>
-
-</p>
 <div>
 </div>
 
-  <header> <h1 align="center">Advice </h1></header>
-</div>
+<div class="row">
+  <div class="column">
+    <h2>Prevention</h2>
+    <p>Perpetrators will look for hairstyles that are easily grabbed (ponytails, buns, braids).
+     They’re more likely to go after someone with long hair.</p>
+    <p>They also look for clothing that is easy and quick to take off. Some will even carry scissors with them to cut clothing.</p>
+    <p>They look for people who are off guard, on their phones, searching their bag, etc.</p>
+    <p>Most perpetrators are likely to attack in the early morning around 5 - 8 am.<p/>
+    <p>The number one place that people are abducted are in grocery store parking lots, then office parking lots/garages,
+       and finally public restrooms. They are trying to look to grab a person and then move them to another location.</p>
+    <p>Only 2% carry weapons because the sentence for rape with a weapon is 12 years longer than solely rape.</p>
+    <p>If you put up a fight, the perpetrator will get discouraged and realize you're not worth it because it will be time consuming.</p>
+    <p>They will not choose people who have umbrellas or objects in their hands that can be used from a distance. Keys are not discouraging
+       to them because you have to get close to them to cause harm.</p>
+    <p>If someone is following you on a street, in a garage, into an elevator or stairwell, look them in the eyes and ask them a question.
+       Now that you’ve seen their face and can identify them in a line-up, it’s riskier for the perpetrator.</p>
+    <p>If you have pepper spray (which is highly encouraged) yell that you do and hold it out</p>
+    <p>If someone grabs you and you can’t beat them by strength, outsmart them. If you are grabbed around the waist from behind, pinch the attacker either
+       under the arm (between the armpit and elbow) or (in the upper-inner thigh) very hard.</p>
+    <p>After that, go for the groin, you might think it’ll make the attacker angerier, but it’s just making it more difficult for the attacker, discouraging them.</p>
+    <p>When an attacker puts their hands up to you, grab their two first fingers and bend back as far as possible with as much pressure pushing down on them as feasible.</p>
+    <p>Always be aware of your surroundings, take someone with you, if possible, if you see something, don’t brush it off, and go with your instinct!</p>
+    <p>It’s best to be safe and cautious!!</p>
+  </div>
+  <div class="column">
+    <h2>Aftermath</h2>
+    <p>Reach out to someone you trust. It’s common to think that if you don’t talk about your rape, it didn’t really happen. But you can’t heal when you’re avoiding the truth.
+       Hiding only adds to feelings of shame. As scary as it is to open up, it’s what will set you free. However, it’s important to be selective about who you tell.
+       Your best bet is someone who will be supportive, empathetic, and calm. If you don’t have someone you trust, talk to a therapist or call a rape crisis hotline.</p>
+<p>You could’nt stop the assault from happening. After the fact, it’s easy to second guess what you did or didn’t do. But when you’re in the midst of an assault, your brain
+   and body are in shock. You can’t think clearly. Many people say they feel “frozen.” Don’t judge yourself for this natural reaction to trauma. You did the best you could under extreme
+    circumstances. If you could have stopped the assault, you would have.
 
-<div>
-  <h3 align = "center">
-<p>Perpetrators will look for hairstyles that are easily grabbed (ponytails, buns, braids). They’re more likely to go after someone with long hair.
-They also look for clothing that is easy and quick to take off. Some will even carry scissors with them to cut clothing.
-They look for women who are off guard, on their phones, searching their purse, etc.
-Most perpetrators are likely to attack in the early morning around 5 - 8 am.
-The number one place that people are abducted are in grocery store parking lots, then office parking lots/garages, and finally public restrooms. They are trying to look to grab a person and then move them to another location.
-Only 2% carry weapons because the sentence for rape with a weapon is 12 years longer than solely rape.
-If you put up a fight, the perpetrator will get discouraged and realize your not worth it because it will be time consuming.
-They will not choose people who have umbrellas or objects in their hands that can be used from a distance. Keys are not discouraging to them because you have to get close to them to cause harm.
-If someone is following you on a street, in a garage, into an elevator or stairwell, look them in the eyes and ask them a question. Now that you’ve seen their face and can identify them in a line-up, it’s riskier for the perpetrator.
-If you have pepper spray (which is highly encouraged) yell that you do and hold it out
-If someone grabs you and you can’t beat them by strength, outsmart them. If you are grabbed around the waist from behind, pinch the attacker either under the arm (between the armpit and elbow) or (in the upper-inner thigh) very hard.
-After that, go for the groin, you might think it’ll make the attacker angerier, but it’s just making it more difficult for the attacker, discouraging them.
-When an attacker puts its hands up to you, grab their two first fingers and bend back as far as possible with as much pressure pushing down on them as feasible.
-Always be aware of your surrounds, take someone with you, if possible, if you see something, don’t brush it off, and go with your instinct!
-It’s best to be safe and cautious!!
+You trusted someone you “shouldn’t” have. One of the most difficult things to deal with following an assault by someone you know is the violation of trust.
+It’s natural to start questioning yourself and wondering if you missed warning signs. Just remember that your attacker is the only one to blame.
+ Don’t beat yourself up for assuming that your attacker was a decent human being. Your attacker is the one who should feel guilty and ashamed, not you.
 
- </p>
-</div>
+You were drunk or not cautious enough. Regardless of the circumstances, the only one who is responsible for the assault is the perpetrator.
+ You did not ask for it or deserve what happened to you. Assign responsibility where it belongs: on the rapist.</p>
+<p>Try to anticipate and prepare for triggers. Common triggers include anniversary dates; people or places associated with the rape; and certain sights, sounds, or smells.
+   If you are aware of what triggers may cause an upsetting reaction, you’ll be in a better position to understand what’s happening and take steps to calm down.</p>
 
-
-
-  </h3>
 
 
 
