--- a/hotline.html
+++ b/hotline.html
@@ -73,7 +73,7 @@ p{
   <li><a href="hotline.html">Hotlines</a></li>
   <li><a href="advice.htm">Advice</a></li>
   <li><a href="comments.htm">Comments</a></li>
-
+  <li><a href="aboutus.htm">About Us</a><li>
 </ul>
 
 
