--- a/comments.htm
+++ b/comments.htm
@@ -1,1 +1,41 @@
-<h1>comments</h1>
+<!-- <!DOCTYPE html>
+<html>
+<title>Comments</title>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="finalProject.css">
+
+<ul>
+  <li><a class="active" href="home.html">Home</a></li>
+  <li><a href="hotline.html">Hotlines</a></li>
+  <li><a href="advice.htm">Advice</a></li>
+  <li><a href="comments.htm">Comments</a></li>
+  <li><a href="aboutus.htm">About Us</a></li>
+</ul>
+
+<style>
+</style>
+
+<body>
+
+<!form>
+<textarea id="words" rows="10" cols="20">Enter comment</textarea>
+<input type="button" onclick="getwords()" value="Enter" /> <br>
+<p id="para"></p>
+</form>
+
+<script type="text/javascript">
+function getwords() {
+  text = words.value;
+  document.getElementById("para").innerHTML += '<p>'+text
+  document.getElementById("words").value = "enter"
+}
+</script> -->
+
+<!--
+</body>
+</html> --> 
