--- a/no.html
+++ b/no.html
@@ -201,7 +201,7 @@ li a:hover {
     <hr class="w3-opacity">
 
     <div class="w3-section">
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: elsol.email@gmail.com</p>
     </div>
 
 
