--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
     <hr class="w3-opacity">
 
     <div class="w3-section">
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: elsol.email@gmail.com</p>
     </div>
 
 
