--- a/comments.html
+++ b/comments.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <title>W3.CSS Template</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="finalProject.css">
+
+  <ul>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="hotline.html">Hotlines</a></li>
+    <li><a href="advice.htm">Advice</a></li>
+    <li><a href="">commments.html</a></li>
+  </ul>
+
+
+
+
+
+
+  <!-- Page Content -->
+
+
+
+  <!-- END PAGE CONTENT -->
+  </div>
 
 <form action="/action_page.php" id="usrform">
   Name: <input type="text" name="usrname">
