--- a/comments.html
+++ b/comments.html
@@ -13,7 +13,8 @@
     <li><a class="active" href="home.html">Home</a></li>
     <li><a href="hotline.html">Hotlines</a></li>
     <li><a href="advice.htm">Advice</a></li>
-    <li><a href="">commments.html</a></li>
+    <li><a href="comments.html">Comments</a></li>
+    <li><a href="aboutus.html">About Us</a></li>
   </ul>
 
 
