--- a/advice.htm
+++ b/advice.htm
@@ -11,7 +11,7 @@
   <li><a class="active" href="home.html">Home</a></li>
   <li><a href="hotline.html">Hotlines</a></li>
   <li><a href="advice.htm">Advice</a></li>
-  <li><a href="comments.htm">Comments</a></li>
+  <li><a href="comments.htmldd">Comments</a></li>
   <li><a href="aboutus.htm">About Us</a></li>
 </ul>
 
