resolving merge conflict

--- a/aboutus.htm
+++ b/aboutus.htm
@@ -24,8 +24,8 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="" alt="Dariela" style="width:100%">
-        <div class="container">
+        <img src="meandhaylie.jpg" alt="Dariela" style="width:50%">
+        
           <h2>Dariela Hernandez</h2>
           <p class="title">Lead Coder &amp; Founder</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
@@ -37,7 +37,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="" alt="Haylie" style="width:100%">
+        <img src="haylie.jpg" alt="Haylie" style="width:50%">
         <div class="container">
           <h2>Haylie Nguyen</h2>
           <p class="title">Coder</p>
@@ -50,7 +50,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="img3.jpg" alt="Dinahsti" style="width:100%">
+        <img src="dinahsti.jpg" alt="Dinahsti" style="width:50%">
         <div class="container">
           <h2>Dinahsti Blackburn</h2>
           <p class="title">Coder</p>
@@ -62,11 +62,12 @@
     </div>
 
   </div>
+
   <div class="column">
     <div class="card">
-      <img src="" alt="Daniella" style="width:100%">
+      <img src="dani.jpg" alt="Daniela" style="width:50%">
       <div class="container">
-        <h2>Daniella Porcayo Marquina</h2>
+        <h2>Daniela Porcayo Marquina</h2>
         <p class="title">Coder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>dpocayomarquina@gmail.com</p>
