resolving merge conflicts

--- a/advice.htm
+++ b/advice.htm
@@ -53,7 +53,7 @@
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="upset.jpg" alt="Crying" style="width:100%">
+      <img src="sad.jpg" alt="Crying" style="width:100%">
       <h3>Anticipate Your Triggers</h3>
       <p>Common triggers include anniversary dates; people or places associated with the rape; and certain sights, sounds, or smells.
          If you are aware of what triggers may cause an upsetting reaction, you’ll be in a better position to understand what’s happening and take steps to calm down.</p>
