--- a/aboutus.htm
+++ b/aboutus.htm
@@ -1,80 +1,91 @@
 <!DOCTYPE html>
 <html>
-<title>AboutUs</title>
-
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
-
-<ul>
-  <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="advice.htm">Advice</a></li>
-  <li><a href="comments.html">Comments</a></li>
-  <li><a href="aboutus.html">About Us</a></li>
-</ul>
-
 <style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
 </style>
-
 <body>
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <img src="meandhaylie.jpg" alt="Dariela" style="width:50%">
-        
-          <h2>Dariela Hernandez</h2>
-          <p class="title">Lead Coder &amp; Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>dari123hdz@gmail.com</p>
-          <p><button class="button">Contact</button></p>
-        </div>
-      </div>
+  <ul>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="hotline.html">Hotlines</a></li>
+    <li><a href="advice.htm">Advice</a></li>
+    <li><a href="comments.html">Comments</a></li>
+    <li><a href="aboutus.htm">About Us</a></li>
+  </ul>
+<!-- Header -->
+<header class="w3-container w3-black w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">About the Founders</h1>
+</header>
+
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Dariela Hernandez</h1>
+      <h5 class="w3-padding-32">Lead Coder & Founder</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
 
-    <div class="column">
-      <div class="card">
-        <img src="haylie.jpg" alt="Haylie" style="width:50%">
-        <div class="container">
-          <h2>Haylie Nguyen</h2>
-          <p class="title">Coder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
-          <p><button class="button">Contact</button></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="card">
-        <img src="dinahsti.jpg" alt="Dinahsti" style="width:50%">
-        <div class="container">
-          <h2>Dinahsti Blackburn</h2>
-          <p class="title">Coder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>dinahsti14black@gmail.com</p>
-          <p><button class="button">Contact</button></p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="column">
-    <div class="card">
-      <img src="dani.jpg" alt="Daniela" style="width:50%">
-      <div class="container">
-        <h2>Daniela Porcayo Marquina</h2>
-        <p class="title">Coder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>dpocayomarquina@gmail.com</p>
-        <p><button class="button">Contact</button></p>
-      </div>
+    <div class="w3-third w3-center">
+      <img src="meandhaylie.jpg" width = "50%">
     </div>
   </div>
 </div>
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <img src="haylie.jpg" width = "50%">
+    </div>
+
+    <div class="w3-twothird">
+      <h1>Haylie Nguyen</h1>
+      <h5 class="w3-padding-32">Coder</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Daniel Porcaya Marquina</h1>
+      <h5 class="w3-padding-32">Coder</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+
+    <div class="w3-third w3-center">
+      <img src="dani.jpg" width = "50%">
+    </div>
+  </div>
+</div>
+
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <img src="Dinahsti.jpg" width = "50%">
+    </div>
+
+    <div class="w3-twothird">
+      <h1>Dinahsti Blackburn</h1>
+      <h5 class="w3-padding-32">Coder</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
