--- a/hotline.html
+++ b/hotline.html
@@ -13,7 +13,7 @@
   <li><a class="active" href="home.html">Home</a></li>
   <li><a href="hotline.html">Hotlines</a></li>
   <li><a href="advice.htm">Advice</a></li>
-  <li><a href="aboutus.html">About Us</a><li>
+  <li><a href="aboutus.htm">About Us</a><li>
 </ul>
 <style>
 p{ margin-left: 250px;
