--- a/aboutus.htm
+++ b/aboutus.htm
@@ -17,13 +17,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <li><a class="active" href="home.html">Home</a></li>
     <li><a href="hotline.html">Hotlines</a></li>
     <li><a href="advice.htm">Advice</a></li>
-    <li><a href="comments.html">Comments</a></li>
     <li><a href="aboutus.htm">About Us</a></li>
   </ul>
 <!-- Header -->
-<header class="w3-container w3-black w3-center" style="padding:128px 16px">
+<!-- <header class="w3-container w3-black w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">About the Founders</h1>
-</header>
+</header> -->
+
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">About Us</h1>
+  </div>
+</div>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
@@ -52,7 +58,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <h1>Haylie Nguyen</h1>
       <h5 class="w3-padding-32">Coder</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="w3-text-grey">Haylie is a junior at Anderson High School in Austin, Texas. She joined Girl Who Code because she wanted to see if she was interested in coding, and she found out that she’s not. In her free time, she likes to watch <i>The Office</i> with her brother and knit baby blankets for Seton Medical Center. She loves <i>Sprinkles Cupcakes</i> and her favorite movies are <i>Jurassic Park</i> and <i>Clueless</i>. In the future, Haylie wishes to attend the University of Texas at Austin as a mechanical engineering major.
+</p>
     </div>
   </div>
 </div>
