--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
 <script src="finalProject.js"></script>
+
+
+
 <style>
 
 </style>
@@ -20,10 +23,11 @@
   <li><a href="aboutus.htm">About Us</a></li>
 </ul>
 
+
 <!-- Sidebar with image -->
-<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+<!-- <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
   <div class="bgimg"></div>
-</nav>
+</nav> -->
 <!-- Page Content -->
 <div class="w3-main w3-padding-large" style="margin-left:40%">
 
