--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 
 <div class="navbar">
   <a href="home.html">Home</a>
-  <a href="hotlines.html">Hotlines</a>
+  <a href="hotline.html">Hotlines</a>
   <a href="advice.htm">Advice</a>
   <a href="aboutus.htm">About Us</a>
 </div>
