--- a/advice.htm
+++ b/advice.htm
@@ -7,12 +7,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="finalProject.css">
 
-<ul>
-  <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="advice.htm">Advice</a></li>
-  <li><a href="aboutus.htm">About Us</a></li>
-</ul>
+<div class="navbar">
+  <a href="home.html">Home</a>
+  <a href="hotline.html">Hotlines</a>
+  <a href="advice.htm">Advice</a>
+  <a href="aboutus.htm">About Us</a>
+</div>
 <style>
 .center {
     display: block;
