--- a/hotline.html
+++ b/hotline.html
@@ -8,12 +8,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
 
-<ul>
-  <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="advice.htm">Advice</a></li>
-  <li><a href="aboutus.htm">About Us</a><li>
-</ul>
+<div class="navbar">
+  <a href="home.html">Home</a>
+  <a href="hotline.html">Hotlines</a>
+  <a href="advice.htm">Advice</a>
+  <a href="aboutus.htm">About Us</a>
+</div>
 <style>
 p{ margin-left: 250px;
   margin-right: 250px;
