--- a/aboutus.htm
+++ b/aboutus.htm
@@ -7,18 +7,23 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
+<script src="finalProject.js"></script>
+
+
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
+
+
 <body>
-  <div class="navbar">
-    <a href="home.html">Home</a>
-    <a href="hotline.html">Hotlines</a>
-    <a href="advice.htm">Advice</a>
-    <a href="aboutus.htm">About Us</a>
-  </div>
+<div class="navbar">
+  <a href="home.html">Home</a>
+  <a href="hotline.html">Hotlines</a>
+  <a href="advice.htm">Advice</a>
+  <a href="aboutus.htm">About Us</a>
+</div>
 <!-- Header -->
 <!-- <header class="w3-container w3-black w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">About the Founders</h1>
