--- a/home.html
+++ b/home.html
@@ -7,8 +7,6 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
-<style>
-</style>
 
 <body>
 <ul>
@@ -20,7 +18,7 @@
 </ul>
 
 <!-- Sidebar with image -->
-<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+<nav class="w3-top w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
   <div class="bgimg"></div>
 </nav>
 <!-- Page Content -->
@@ -103,25 +101,28 @@
 
 
 
+
     <div class="w3-row-padding" style="margin:0 -16px">
+
       <div class="w3-half w3-margin-bottom">
-        <ul class="w3-ul w3-center w3-card w3-hover-shadow">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">#MeToo Twitter</li>
+        <div class="w3-ul w3-center w3-card w3-hover-shadow" >
+          <div class="w3-dark-grey w3-xlarge w3-padding-small">#MeToo Twitter</div>
+
     <a class="twitter-timeline" data-width="325" data-height="400" href="https://twitter.com/MeTooMVMT?ref_src=twsrc%5Etfw">
       Tweets by MeTooMVMT</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <span class="w3-opacity"></span>
-          </li>
-        </ul>
+        </div>
       </div>
 
-      <div class="w3-half">
-        <ul class="w3-ul w3-center w3-card w3-hover-shadow">
-          <li class="w3-black w3-xlarge w3-padding-32">#TimesUp Twitter</li>
+      <div class="w3-half w3-margin-bottom">
+        <div class="w3-ul w3-center w3-card w3-hover-shadow">
+          <div class="w3-black w3-xlarge w3-padding-small">#TimesUp Twitter</div>
 
-          <a class="twitter-timeline" data-width="350" data-height="400" href="https://twitter.com/TIMESUPNOW?ref_src=twsrc%5Etfw">
+          <a class="twitter-timeline" data-width="325" data-height="400" href="https://twitter.com/TIMESUPNOW?ref_src=twsrc%5Etfw">
             Tweets by TIMESUPNOW</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-          </li>
-        </ul>
+            <span class="w3-opacity"></span>
+
+
       </div>
     <!-- End Grid/Pricing tables -->
     </div>
@@ -132,7 +133,9 @@
     <hr class="w3-opacity">
 
     <div class="w3-section">
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: elsol.email@gmail.com</p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i>
+        <li><a href="elsol.email@gmail.com">Email: elsol.email@gmail.com</a></li>
+      </p>
     </div>
 
 
