--- a/comments.html
+++ b/comments.html
@@ -14,32 +14,27 @@
     <li><a href="hotline.html">Hotlines</a></li>
     <li><a href="advice.htm">Advice</a></li>
     <li><a href="comments.html">Comments</a></li>
-    <li><a href="aboutus.html">About Us</a></li>
+    <li><a href="aboutus.htm">About Us</a></li>
   </ul>
 
-
+  <style>
+  div.a {
+    text-align: center;
+  }
+  p {
+      margin-top: 50px;
+      margin-bottom: 100px;
+      margin-right: 150px;
+      margin-left: 100px;
+  }
+  </style>
 
 
 
 
   <!-- Page Content -->
 
-
-
   <!-- END PAGE CONTENT -->
-  </div>
-
-<form action="/action_page.php" id="usrform">
-  Name: <input type="text" name="usrname">
-  <input type="submit">
-</form>
-<br>
-<textarea rows="4" cols="50" name="comment" form="usrform">
-Enter text here...</textarea>
-
-<p>The text area above is outside the form element, but should still be a part of the form.</p>
-
-<p><b>Note:</b> The form attribute is not supported in IE.</p>
 
 </body>
 </html>
