--- a/hotline.html
+++ b/hotline.html
@@ -19,7 +19,9 @@ p{ margin-left: 250px;
   margin-right: 250px;
   text-indent: 50px;
 }
-
+p.ex1 {
+    margin-top: 75px;
+}
 .center {
     display: block;
     margin-left: auto;
@@ -28,7 +30,7 @@ p{ margin-left: 250px;
 }
 </style>
 
-<p>
+<p class="ex1">
 
 </p>
 <div><img class="center" src="phone.gif"></div>
