--- a/advice.htm
+++ b/advice.htm
@@ -15,6 +15,10 @@
   <a href="aboutus.htm">About Us</a>
 </div>
 <style>
+body{
+  background-image: ("Untitled2.png")
+}
+
 .center {
     display: block;
     margin-left: auto;
