--- a/advice.htm
+++ b/advice.htm
@@ -15,9 +15,6 @@
   <a href="aboutus.htm">About Us</a>
 </div>
 <style>
-body{
-  background-image: ("Untitled2.png")
-}
 
 .center {
     display: block;
@@ -26,8 +23,11 @@ body{
     width: 7%;
 }</style>
 
-<body>
-
+<style>
+body{
+  background-image: url("Untitled2.png"):
+}
+</style>  
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:50px">
