--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
   <a href="home.html">Home</a>
   <a href="hotline.html">Hotlines</a>
   <a href="advice.htm">Advice</a>
+  <a href="lawyers.htm">Lawyers</a>
   <a href="aboutus.htm">About Us</a>
 </div>
 
