--- a/lawyers.htm
+++ b/lawyers.htm
@@ -38,7 +38,7 @@ p.ex1 {
 <div>
 
 
-  <header> <h1 align="center">Hotlines </h1></header>
+  <header> <h1 align="center">Lawyers</h1></header>
 </div>
 
 
