--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
 <div class="navbar">
   <a href="home.html">Home</a>
   <a href="hotline.html">Hotlines</a>
+  <a href="yourstory.htm">Your Story</a>
   <a href="advice.htm">Advice</a>
   <a href="lawyers.htm">Lawyers</a>
   <a href="aboutus.htm">About Us</a>
