--- a/aboutus.htm
+++ b/aboutus.htm
@@ -13,12 +13,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
 <body>
-  <ul>
-    <li><a class="active" href="home.html">Home</a></li>
-    <li><a href="hotline.html">Hotlines</a></li>
-    <li><a href="advice.htm">Advice</a></li>
-    <li><a href="aboutus.htm">About Us</a></li>
-  </ul>
+  <div class="navbar">
+    <a href="home.html">Home</a>
+    <a href="hotline.html">Hotlines</a>
+    <a href="advice.htm">Advice</a>
+    <a href="lawyers.htm">Lawyers</a>
+    <a href="aboutus.htm">About Us</a>
+  </div>
 <!-- Header -->
 <!-- <header class="w3-container w3-black w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">About the Founders</h1>
