--- a/hotline.html
+++ b/hotline.html
@@ -55,13 +55,14 @@ Here are some resources you can utilize whenever you're feeling down. It's impor
 <p>National Sexual Assault Hotline | <a href="1-800-656-4673">1-800-656-HOPE (4673)</a> </p>
 <p>Teen Hope Line | <a href="1-800-394-4673">1-800-394-HOPE (4673)</a></p>
 <p>Youth Crisis Hotline | <a href="1-800-448-4663">1-800-448-4663</a></p>
- </p>
- <p> RAINN | <a href="1-800-656-4673">1-800-656-HOPE (4673)</a></p>
-<p>National Domestic Violence Hotline | <a href="1-800-799-7233">1-800-799-SAFE (7233)</a>
- </p>
- <p>National Domestic Violence Hotline Spanish | <a href="1-800-942-6908">1-800-942-6908</a>
 </p>
-</p>
+<p>RAINN | <a href="1-800-656-4673">1-800-656-HOPE (4673)</a></p>
+<p>National Domestic Violence Hotline | <a href="1-800-799-7233">1-800-799-SAFE (7233)</a></p>
+<p>National Domestic Violence Hotline Spanish | <a href="1-800-942-6908">1-800-942-6908</a></p>
+<p>Stop it Now! | <a href="1-888-773-8368">1-888-PREVENT (773-8368)</a></p>
+<p>United States Elder Abuse Hotline | <a href="1-866-363-4276">1-866-363-4276</a></p>
+<p>National Child Abuse Hotline | <a href="1-800-422-4453"> 1-800-4-A-CHILD (422-4453)</a></p>
+<p>
 </div>
 
 
