--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
       </div>
       <!-- Portfolio Section -->
       <div class="w3-padding-32 w3-content" id="portfolio">
-        <h2 class="w3-text-grey">Pictures</h2>
+        <h2 class="w3-text-grey">You Are Not Alone</h2>
         <hr class="w3-opacity">
 
     <!-- Grid for photos -->
