--- a/home.html
+++ b/home.html
@@ -32,15 +32,16 @@
   <div class="w3-main w3-padding-large" style="margin-left:40%">
 
     <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+      <img align = "center" src="LOGO.jpg" alt="logo" width="300" height="400" />
+
       <div class="header">
-        <h1 class="w3-jumbo"><b>El Sol</b></h1>
+        <h1 class="w3-jumbo"></h1>
+
         <p>
 
         </p>
-        <img align = "center" src="sole.jpg" alt="logo" />
       </div>
     </header>
-
     <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
       <h2>About</h2>
       <hr class="w3-opacity">
