--- a/hotline.html
+++ b/hotline.html
@@ -20,7 +20,19 @@ p{ margin-left: 250px;
   margin-right: 250px;
   text-indent: 50px;
 }
-p.ex1 {
+
+body {
+  background-image: url("backgrd.jpg.png");
+  /* height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: filled;
+  /* position: fill; */ */
+}
+
+
+
+p.ex1{
     margin-top: 75px;
 }
 .center {
