--- a/lawyers.htm
+++ b/lawyers.htm
@@ -29,6 +29,15 @@ p.ex1 {
     margin-right: auto;
     width: 10%;
 }
+body {
+  background-image: url("back.png");
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  /* position: fill; */
+    background-repeat: no-repeat;
+}
 </style>
 
 <p class="ex1">
@@ -44,7 +53,7 @@ p.ex1 {
 
 <div>
   <p align = "center">
-You are able to take action. There are lawyers around you that are ready to fight for you and for justice. These are links to several lawyers that are dedicated to helping victims of sexual assault. A crime is a crime and you have the right to take your assailent to court. It is important that you are safe, and that includes putting the perpetrator behind bars.
+You are able to take action. There are lawyers around you that are ready to fight for you and for justice. These are links to several lawyers that are dedicated to helping victims of sexual assault. A crime is a crime and you have the right to take your assailant to court. It is important that you are safe, and that includes putting the perpetrator behind bars.
 
   <!-- End Contact Section -->
 </div><p></p>
