--- a/hotline.html
+++ b/hotline.html
@@ -26,8 +26,8 @@ body {
   /* height: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: filled;
-  /* position: fill; */ */
+  background-size: filled; */
+  /* position: fill; */
 }
 
 
