--- a/lawyers.htm
+++ b/lawyers.htm
@@ -37,6 +37,7 @@ body {
   background-size: cover;
   /* position: fill; */
     background-repeat: no-repeat;
+    margin-bottom: 0;
 }
 </style>
 
