--- a/hotline.html
+++ b/hotline.html
@@ -13,6 +13,7 @@
   <a href="hotline.html">Hotlines</a>
   <a href="advice.htm">Advice</a>
   <a href="aboutus.htm">About Us</a>
+  <a href="lawyers.htm">Lawyers</a>
 </div>
 <style>
 p{ margin-left: 250px;
