--- a/lawyers.htm
+++ b/lawyers.htm
@@ -32,12 +32,13 @@ p.ex1 {
 body {
   background-image: url("back.png");
   width: 100%;
-  height: 100%;
-  background-position: center;
+  height: 85%;
+  background-position: absolute;
   background-size: cover;
-  /* position: fill; */
+  position: fill;
     background-repeat: no-repeat;
-    margin-bottom: 0;
+    bottom: 0;
+    padding-bottom: 0;
 }
 </style>
 
