navigation bar links

--- a/advice.htm
+++ b/advice.htm
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="finalProject.css">
 
 <div class="navbar">
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="hotline.html">Hotlines</a>
   <a href="advice.htm">Advice</a>
   <a href="lawyers.htm">Lawyers</a>
