--- a/aboutus.htm
+++ b/aboutus.htm
@@ -14,7 +14,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </style>
 <body>
   <div class="navbar">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="hotline.html">Hotlines</a>
     <a href="advice.htm">Advice</a>
     <a href="lawyers.htm">Lawyers</a>
