--- a/aboutus.htm
+++ b/aboutus.htm
@@ -61,7 +61,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <h1>Haylie Nguyen</h1>
       <h5 class="w3-padding-32">Coder</h5>
 
-      <p class="w3-text-grey">Haylie is a junior at Anderson High School in Austin, Texas. She joined Girl Who Code because she wanted to see if she was interested in coding, and she found out that she’s not. In her free time, she likes to watch <i>The Office</i> with her brother and knit baby blankets for Seton Medical Center. She loves <i>Sprinkles Cupcakes</i> and her favorite movies are <i>Jurassic Park</i> and <i>Clueless</i>. In the future, Haylie wishes to attend the University of Texas at Austin as a mechanical engineering major.
+      <p class="w3-text-grey">Haylie is a junior at Anderson High School in Austin, Texas. She joined Girl Who Code because she wanted to see if she was interested in coding. In her free time, she likes to watch <i>The Office</i> with her brother and knit baby blankets for Seton Medical Center. She loves <i>Sprinkles Cupcakes</i> and her favorite movies are <i>Jurassic Park</i> and <i>Clueless</i>. In the future, Haylie wishes to attend the University of Texas at Austin as a mechanical engineering major.
 </p>
     </div>
   </div>
